Do not fire events on trimmed descendants of leaf nodes

NOTRY:true

Bug: 887512
Change-Id: Ie4aab44d8eb186b9aff35036aa5317c6f79fc643
Reviewed-on: https://chromium-review.googlesource.com/1236714
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593562}
Former-commit-id: b63fffc7b5912b4f279317897f213337b8057f48