content/browser/accessibility/browser_accessibility_manager.cc
@@ -373,7 +373,7 @@ void BrowserAccessibilityManager::OnAccessibilityEvents(
   // Fire any events related to changes to the tree.
   for (auto targeted_event : *this) {
     BrowserAccessibility* event_target = GetFromAXNode(targeted_event.node);
-    if (!event_target)
+    if (!event_target || event_target->PlatformIsChildOfLeaf())
       continue;
 
     FireGeneratedEvent(targeted_event.event_params.event, event_target);
@@ -386,7 +386,7 @@ void BrowserAccessibilityManager::OnAccessibilityEvents(
 
     // Fire the native event.
     BrowserAccessibility* event_target = GetFromID(event.id);
-    if (!event_target)
+    if (!event_target || event_target->PlatformIsChildOfLeaf())
       return;
 
     if (event.event_type == ax::mojom::Event::kHover)
